syntax = "proto3";

option go_package = "/filecomponentsservice/pb";

message Files {
    string user_id = 1;
    repeated string file_paths = 2;
}

message FileComponent {
    string file_path = 1;
    int32 start_line = 2;
    int32 end_line = 3;
}

service FileComponentsService {
    rpc ExtractFilesComponents(Files) returns (stream FileComponent);
}